@startuml
title Sistema de Cine y Streaming - Diagrama ER (Actualizado)

entity Usuarios {
  + id_usuario : INT <<PK>>
  --
  nombre : VARCHAR
  email : VARCHAR
  password : VARCHAR
  edad : INT
  genero : VARCHAR
  rol : VARCHAR
  fecha_registro : DATE
}

entity Contenido {
  + id_contenido : INT <<PK>>
  --
  titulo : VARCHAR
  tipo : VARCHAR
  genero : VARCHAR
  año : INT
  duracion_min : INT
  id_creador : INT <<FK>>
}

entity Visualizaciones {
  + id_visualizacion : INT <<PK>>
  --
  id_usuario : INT <<FK>>
  id_contenido : INT <<FK>>
  fecha_visualizacion : DATE
}

Usuarios ||--o{ Visualizaciones : realiza
Contenido ||--o{ Visualizaciones : tiene
Usuarios ||--o{ Contenido : publica

note right of Contenido
Solo usuarios con rol = "creador"
pueden publicar contenido
end note

@enduml